# lineage-and-usage-agents-

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  annotations.py  base.py  documents.py  inventory.py  lineage.py  orchestration.py  rules.py  summary.py  transformation.py  usage.py  verification.py
backend/app/models/: run.py  schema.py
backend/app/parsers/: etl_xml.py  snowflake_pipeline.py  ssis_xml.py  teradata_bteq.py
backend/app/routers/: buckets.py  chat.py  runs.py  transform.py
backend/app/services/: gcs.py  github_push.py  handover.py  migration.py  oracle.py  orchestrator.py  sensitivity_propagation.py  store.py  transform_storage.py
backend/app/transformer/: __init__.py  dataform_project.py  insignia_to_ir.py  procedure_converter.py  raw_bootstrap.py  runner.py  snowflake_to_ir.py  sql_helpers.py  ssis_to_ir.py  teradata_to_ir.py  validation.py
backend/tests/: test_transformer.py
demo-data/: README.md  generate_demo_data.py
docs/: PRODUCT_OVERVIEW.md  TUESDAY_TALKING_CARDS.md  TUESDAY_TECHNICAL_GUIDE.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
infra/: cloudbuild.yaml  setup.sh
scripts/: README.md  load_raw_layer.py  (+1 more)
transformation-core/: README.md  pyproject.toml
transformation-core/tests/: test_smoke.py
transformation-core/transformation_core/: __init__.py  default_value_registry.py  ir.py  naming.py  sql_generator.py  sqlx_post_processor.py  sqlx_validator.py  sqlx_wrapper.py
(+53 files in other folders)
